# llmbench

./: .env.example  .gitignore  AGENTS.md  README.md  history.md  llmbench-prd.md  pyproject.toml  suite.cat_bench.yaml  suite.example.yaml
.github/workflows/: refresh-leaderboards.yml  release.yml
prompts/: cat_bench.yaml  default.yaml
src/benchman/: cli.py  runner.py  tui.py
src/benchman/adapters/: base.py
src/benchman/benchmarks/: quality_exact.py  throughput.py
src/benchman/data/: bundled_leaderboard.json
src/benchman/leaderboards/: __init__.py  bundled.py  cache.py  lmarena.py
src/benchman/reports/: __init__.py
src/llmbench/: cli.py  config.py  runner.py  schema.py  storage.py  tui.py
src/llmbench/adapters/: __init__.py  anthropic.py  flux.py  gemini.py  openai_compat.py
src/llmbench/agent/: __init__.py  loop.py  pricing.py  provider.py  runner.py
src/llmbench/benchmarks/: __init__.py  (+3 more)
tests/: test_agent_failure_injector.py  test_agent_fake_fs.py  test_agent_fake_http.py  test_agent_fake_search.py  test_agent_fake_shell.py  test_agent_fake_sql.py  test_agent_loop.py  test_agent_provider_gemini.py  test_agent_provider_openai_compat.py  test_agent_runner.py  test_gallery.py  test_image_gen.py  test_leaderboard.py  test_pricing.py  test_quality.py  test_schema.py  test_task_api_orchestration.py  test_task_file_refactor.py  test_task_long_horizon.py  test_task_multi_step_research.py  test_task_recovery.py  test_throughput.py
web/: index.html  main.js  styles.css  tui.js
web/data/: aider.json  all.json  bundled.json  huggingface.json  lmarena.json
(+28 files in other folders)
